# Cost-Basis-Trading

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent_workflows/: __init__.py  in_dev_review_artifacts.py  in_dev_review_client.py  in_dev_review_graph.py  in_dev_review_nodes.py  in_dev_review_state.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/data/: cache_event_summary.py  cache_writer.py  cached_market_data_client.py  market_cache.py  market_cache_inspector.py  market_data_client_factory.py  tushare_client.py
backend/app/domain/: errors.py  models.py
backend/app/factors/: __init__.py  chip_factors.py
backend/app/services/: backtest_service.py  code_normalizer.py  research_agent_client.py  research_run_service.py  scan_service.py
backend/app/strategies/: candidates.py  composite.py  features.py  market_context.py
backend/tests/: test_api.py  test_backtest_service.py  test_cache_event_summary.py  test_cache_writer.py  test_cached_market_data_client.py  test_chip_factor_batch.py  test_chip_factor_evaluator.py  test_chip_factors.py  test_ecc_artifact_reviewer.py  test_ecc_quality_workflow.py  test_factor_redundancy_review.py  test_factor_signal_similarity_review.py  test_in_dev_review_workflow.py  test_market_cache.py  test_market_cache_inspect.py  test_market_data_client_factory.py  test_research_run_service.py  test_scan_service.py  test_strategies.py  test_tushare_client.py
codex/: current-session.md
docs/: ARCHITECTURE.md  RELIABILITY.md  SECURITY.md  (+1 more)
(+69 files in other folders)
