[project]
name = "cost-basis-trading-backend"
version = "0.1.0"
description = "FastAPI backend for Tushare chip distribution signal scans."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "openai>=1.0",
  "tushare>=1.4",
  "pandas>=2.2",
  "langgraph>=1.0",
  "langgraph-checkpoint-sqlite>=3.0",
  "langsmith>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
